--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -367,3 +367,8 @@ PAYPAL FORMS (TABLES)
 table {
     margin: 2rem 0;
 }
+
+select {
+    width: 100%;
+    overflow: hidden;
+}
